<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.coding.team.meetpin.Main2Activity">
    <item android:id="@+id/action_settings"
          android:title="@string/action_profile"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/friendsListButton"
          android:title="@string/action_friends"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/inviteFriendButton"
          android:title="@string/invite_friends"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/mapButton"
          android:title="@string/action_map"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/logOutButton"
          android:title="@string/action_log_out"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
